--- a/src/index.html
+++ b/src/index.html
@@ -280,8 +280,8 @@
                   <div class="packages__images grid">
                     <div class="packages__image">
                       <picture>
-                        <source srcset="img/plant-1.webp" type="image/webp">
-                        <img loading="lazy" src="img/plant-1.png" alt="Lollo Rosso Letuce"       width="127" height="127"
+                        <source srcset="img/image-5.webp" type="image/webp">
+                        <img loading="lazy" src="img/image-5.png" alt="Lollo Rosso Letuce"       width="127" height="127"
                       >
                       </picture>
 
@@ -289,20 +289,20 @@
                     </div>
                     <div class="packages__image">
                       <picture>
-                        <source srcset="img/plant-3.webp" type="image/webp">
-                        <img loading="lazy" src="img/plant-3.png" alt="Lollo Bionda Lettuce"  width="127" height="127">
+                        <source srcset="img/image-4.webp" type="image/webp">
+                        <img loading="lazy" src="img/image-4.png" alt="Lollo Bionda Lettuce"  width="127" height="127">
                       </picture>
                     </div>
                     <div class="packages__image">
                       <picture>
-                        <source srcset="img/plant-2.webp" type="image/webp">
-                        <img loading="lazy" src="img/plant-2.png" alt="Super Kale" class="packages__image" width="127" height="127">
+                        <source srcset="img/image.webp" type="image/webp">
+                        <img loading="lazy" src="img/image.png" alt="Super Kale" class="packages__image" width="127" height="127">
                       </picture>
                     </div>
                     <div class="packages__image">
                      <picture>
-                      <source srcset="img/plant-4.webp" type="image/webp">
-                      <img loading="lazy" src="img/plant-4.png" alt="Fragrant Basil" class="packages__image" width="127" height="127">
+                      <source srcset="img/image-6.webp" type="image/webp">
+                      <img loading="lazy" src="img/image-6.png" alt="Fragrant Basil" class="packages__image" width="127" height="127">
                      </picture>
                     </div>
                   </div>
@@ -358,29 +358,31 @@
                   <div class="packages__images grid">
                     <div class="packages__image">
                       <picture>
-                        <source srcset="img/plant-1.webp" type="image/webp">
-                        <img loading="lazy" src="img/plant-1.png" alt="Lollo Rosso Letuce"       width="127" height="127"
+                        <source srcset="img/image-5.webp" type="image/webp">
+                        <img loading="lazy" src="img/image-5.png" alt="Lollo Rosso Letuce"       width="127" height="127"
                       >
                       </picture>
+
+
                     </div>
                     <div class="packages__image">
                       <picture>
-                        <source srcset="img/plant-3.webp" type="image/webp">
-                        <img loading="lazy" src="img/plant-3.png" alt="Lollo Bionda Lettuce"  width="127" height="127">
+                        <source srcset="img/image-4.webp" type="image/webp">
+                        <img loading="lazy" src="img/image-4.png" alt="Lollo Bionda Lettuce"  width="127" height="127">
                       </picture>
                     </div>
-                    <div class="packages__image">
+                    <div class="packages__image image-offset">
 
                       <picture>
-                        <source srcset="img/plant-5.webp" type="image/webp">
-                        <img loading="lazy" src="img/plant-5.png" alt="Green Bok Choy"       width="127" height="127"
+                        <source srcset="img/image-7.webp" type="image/webp">
+                        <img loading="lazy" src="img/image-7.png" alt="Green Bok Choy"       width="127" height="127"
                       >
                       </picture>
                     </div>
                     <div class="packages__image">
                       <picture>
-                        <source srcset="img/plant-6.webp" type="image/webp">
-                        <img loading="lazy" src="img/plant-6.png" class="image" width="127" height="127" alt="Mighty Spinach">
+                        <source srcset="img/image-3.webp" type="image/webp">
+                        <img loading="lazy" src="img/image-3.png" class="image" width="127" height="127" alt="Mighty Spinach">
                       </picture>
 
                     </div>
