--- a/src/index.html
+++ b/src/index.html
@@ -97,8 +97,8 @@
 
           <div class="container">
             <div class="benefits__inner grid">
-              <div class="benefits__list grid" data-aos="fadeup">
-                <div class="benefits__item flex align-items-center">
+              <div class="benefits__list grid">
+                <div class="benefits__item flex align-items-center" data-aos="fadeup" >
                   <svg class="align-self-start" width="88" height="88" viewBox="0 0 88 88" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="44" cy="44" r="43.5" stroke="#E3E2AA"/>
                     <path d="M40.2058 66C42.0334 66 43.515 64.5184 43.515 62.6907C43.515 60.8631 42.0334 59.3815 40.2058 59.3815C38.3781 59.3815 36.8965 60.8631 36.8965 62.6907C36.8965 64.5184 38.3781 66 40.2058 66Z" stroke="#E3E2AA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -111,7 +111,8 @@
                     Delivered weekly
                   </h3>
                 </div>
-                <div class="benefits__item flex align-items-center">
+                <div class="benefits__item flex align-items-center"
+                data-aos="fadeup" data-aos-delay="150">
                   <svg class="align-self-start" width="88" height="88" viewBox="0 0 88 88" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="44" cy="44" r="43.5" stroke="#E3E2AA"/>
                     <path d="M57.3727 35.2918C57.3727 32.2093 57.3727 29.1269 57.1569 27.0925C57.1585 26.5939 57.0392 26.1023 56.8091 25.66C56.579 25.2176 56.245 24.8377 55.8359 24.5528C55.4267 24.2679 54.9545 24.0865 54.4598 24.0242C53.9651 23.9619 53.4627 24.0205 52.9956 24.195C46.3375 26.1061 32.7439 30.8839 27.0414 39.0832C20.8765 47.7757 25.6235 57.732 27.8737 61.6159C28.2015 62.1649 28.6489 62.6329 29.1826 62.9851C29.7163 63.3373 30.3225 63.5647 30.9561 63.6503C33.7944 64.1619 36.6933 64.245 39.5561 63.8969" stroke="#E3E2AA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -124,7 +125,8 @@
                     Pesticide-free
                   </h3>
                 </div>
-                <div class="benefits__item flex align-items-center">
+                <div class="benefits__item flex align-items-center"
+                data-aos="fadeup" data-aos-delay="250">
                   <svg class="align-self-start" width="88" height="88" viewBox="0 0 88 88" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="44" cy="44" r="43.5" stroke="#E3E2AA"/>
                     <g clip-path="url(#clip0_273_157)">
@@ -143,7 +145,8 @@
                     Full of vitamins
                   </h3>
                 </div>
-                <div class="benefits__item flex align-items-center">
+                <div class="benefits__item flex align-items-center"
+                data-aos="fadeup" data-aos-delay="350">
                   <svg width="88" height="88" viewBox="0 0 88 88" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="44" cy="44" r="43.5" stroke="#E3E2AA"/>
                     <path d="M43.0519 59.6027L43.0513 59.6022C35.1122 52.6559 31.1536 46.4207 31.1536 40.9732C31.1536 37.5732 32.5042 34.3125 34.9084 31.9084C37.3125 29.5042 40.5732 28.1536 43.9732 28.1536C45.6567 28.1536 47.3237 28.4852 48.8791 29.1294C50.4344 29.7737 51.8477 30.7179 53.0381 31.9084C54.2285 33.0988 55.1728 34.512 55.817 36.0673C56.4613 37.6227 56.7929 39.2897 56.7929 40.9732C56.7929 46.5495 52.6436 52.9508 44.3213 60.0991L43.0519 59.6027ZM43.0519 59.6027L43.6247 60.0988L43.6251 60.0991M43.0519 59.6027L43.6251 60.0991M43.6251 60.0991C43.722 60.1824 43.8455 60.2282 43.9732 60.2282M43.6251 60.0991L43.9732 60.2282M43.9732 60.2282C44.1009 60.2282 44.2244 60.1824 44.3213 60.0991L43.9732 60.2282ZM45.6262 61.6192L45.7239 61.733L45.6262 61.6192C45.1654 62.015 44.5779 62.2324 43.9705 62.2319C43.3631 62.2314 42.7761 62.013 42.316 61.6165C42.316 61.6164 42.3159 61.6164 42.3158 61.6163L41.7362 61.1133C33.3555 53.779 29.15 47.0909 29.15 40.9732C29.15 37.0419 30.7117 33.2715 33.4916 30.4916C36.2715 27.7117 40.0419 26.15 43.9732 26.15C47.9046 26.15 51.6749 27.7117 54.4548 30.4916C57.2347 33.2715 58.7964 37.0419 58.7964 40.9732C58.7964 47.2309 54.396 54.0877 45.6262 61.6192ZM43.9732 35.3643C45.4608 35.3643 46.8874 35.9552 47.9393 37.0071C48.9912 38.059 49.5821 39.4856 49.5821 40.9732C49.5821 42.4608 48.9912 43.8874 47.9393 44.9393C46.8874 45.9912 45.4608 46.5821 43.9732 46.5821C42.4856 46.5821 41.059 45.9912 40.0071 44.9393C38.9552 43.8874 38.3643 42.4608 38.3643 40.9732C38.3643 39.4856 38.9552 38.059 40.0071 37.0071C41.059 35.9552 42.4856 35.3643 43.9732 35.3643ZM43.9732 37.3679C43.017 37.3679 42.1 37.7477 41.4238 38.4238C40.7477 39.1 40.3679 40.017 40.3679 40.9732C40.3679 41.9294 40.7477 42.8465 41.4238 43.5226C42.1 44.1987 43.017 44.5786 43.9732 44.5786C44.9294 44.5786 45.8465 44.1987 46.5226 43.5226C47.1987 42.8465 47.5786 41.9294 47.5786 40.9732C47.5786 40.017 47.1987 39.1 46.5226 38.4238C45.8465 37.7477 44.9294 37.3679 43.9732 37.3679Z" fill="#" stroke="#E3E2AA" stroke-width="1.6"/>
@@ -157,7 +160,8 @@
                     Grown in Dubai Hills
                   </h3>
                 </div>
-                <div class="benefits__item flex align-items-center">
+                <div class="benefits__item flex align-items-center"
+                data-aos="fadeup" data-aos-delay="450">
                   <svg class="align-self-start" width="88" height="88" viewBox="0 0 88 88" fill="none" xmlns="http://www.w3.org/2000/svg">
 <circle cx="44" cy="44" r="43.5" stroke="#E3E2AA"/>
 <path d="M55.911 61.544L61.281 42.544C61.3651 42.2465 61.3791 41.9336 61.3219 41.6299C61.2646 41.3261 61.1378 41.0397 60.9513 40.7932C60.7648 40.5467 60.5236 40.3468 60.2468 40.2092C59.97 40.0715 59.6651 39.9999 59.356 40H47.875C47.7104 40 47.548 39.9629 47.3997 39.8914C47.2515 39.8199 47.1213 39.7159 47.0188 39.5871C46.9164 39.4583 46.8443 39.308 46.808 39.1475C46.7716 38.987 46.772 38.8204 46.809 38.66L47.309 36.496C47.767 34.511 47.914 32.466 47.745 30.436L47.653 29.333C47.5544 28.1497 47.0396 27.0396 46.2 26.2C45.432 25.4318 44.3903 25.0002 43.304 25H43.064C42.407 25 41.802 25.356 41.484 25.93L38.825 30.715C37.633 32.861 35.8561 34.6244 33.701 35.8L27.042 39.43C26.7263 39.6023 26.4629 39.8565 26.2795 40.1659C26.0961 40.4752 25.9996 40.8284 26 41.188V61C26 61.5304 26.2107 62.0391 26.5858 62.4142C26.9609 62.7893 27.4696 63 28 63H53.987C54.4225 62.9999 54.846 62.8576 55.1933 62.5948C55.5406 62.332 55.7925 61.9631 55.911 61.544Z" stroke="#E3E2AA" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -187,7 +191,7 @@
           <div class="container">
             <h2 class="subscription__title section-title section-title-with-margin centered">How our subscription works</h2>
             <div class="subscription__inner grid grid-cols-12">
-              <ol class="subscription__list flex align-items-start">
+              <ol class="subscription__list flex">
                 <li class="subscription__item" data-aos="fadeup">
                   <div class="subscription__info grid">
                     <h3 class="subscription__subtitle">
@@ -542,7 +546,7 @@
             <h2 class="about__title section-title section-title-with-margin color-primary centered">
               About Alesca
             </h2>
-            <div class="about__inner align-items-start grid grid-cols-12">
+            <div class="about__inner grid grid-cols-12">
               <div class="about__img ibg" data-aos="fadeup">
                 <picture>
                   <source media="(max-width: 1400px)" srcset="img/plants-mobile.webp">
@@ -595,8 +599,8 @@
           </div>
         </section>
 
-        <section class="info bg-secondary">
-          <div class="container info__inner grid grid-cols-12 align-items-center">
+        <section class="info section-offset">
+          <div class="container info__inner grid grid-cols-12 align-items-center bg-secondary">
             <div class="info__content grid" data-aos="fadeup">
               <h2 class="info__title section-title">
                 Want to know more about our technology?
