--- a/app/terms-and-conditions.html
+++ b/app/terms-and-conditions.html
@@ -1,4 +1,6 @@
-<head>
+<!DOCTYPE html>
+<html lang="en">
+ <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -317,3 +319,44 @@
   <link rel="stylesheet" href="css/main.css">
   <script defer src="js/main.js"></script>
 </head>
+
+ <body class="page__body">
+  <main>
+   <section class="terms">
+    <div class="container">
+     <h1 class="terms-and-conditions section-title color-primary">
+      Terms & Conditions
+     </h1>
+     <p>
+      Because we want you to have all the information you might need, below you’ll find the Terms & Conditions of our live offers.
+     </p>
+     <div class="terms__inner">
+      <h2>WEBSITE</h2>
+      <p>United Arab Emirates is our country of domicile.</p>
+      <p>This website is owned and managed by Alesca UAE Agricultural Technologies LLC. United Arab Emirates is our country of domicile.</p>
+      <p>Minors under the age of 18 shall are prohibited to register as a User of this website and are not allowed to transact or use the website.</p>
+      <p>Any dispute or claim arising out of or in connection with this website shall be governed and construed in accordance with the laws of UAE.</p>
+      <h2>PRIVACY</h2>
+      <p>All credit/debit cards details and personally identifiable information will NOT be stored, sold, shared, rented, or leased to any third parties.</p>
+      <p>The Website Policies and Terms & Conditions may be changed or updated occasionally to meet the requirements and standards. Therefore, the Customers are encouraged to frequently visit these sections to be updated about the changes on the website. Modifications will be effective on the day they are posted.</p>
+      <p>Some of the advertisements you see on the Site are selected and delivered by third parties, such as ad networks, advertising agencies, advertisers, and audience segment providers. These third parties may collect information about you and your online activities, either on the Site or on other websites, through cookies, web beacons, and other technologies in an effort to understand your interests and deliver to you advertisements that are tailored to your interests. Please remember that we do not have access to, or control over, the information these third parties may collect. The information practices of these third parties are not covered by this privacy policy.</p>
+      <h2>PAYMENTS</h2>
+      <p>If you make a payment for our products or services on our website, the details you are asked to submit will be provided directly to our payment provider via a secured connection.</p>
+      <p>The cardholder must retain a copy of transaction records and Merchant policies and rules.</p>
+      <p>We accept payments online using Visa and MasterCard credit/debit card in AED (or any other agreed currencies).</p>
+      <h2>DELIVERY</h2>
+      <p>Alesca UAE Agricultural Technologies LLC. will NOT deal or provide any services or products to any of OFAC (Office of Foreign Assets Control) sanctions countries in accordance with the law of UAE. Multiple transactions may result in multiple postings to the cardholder’s monthly statement.</p>
+      <h2>REFUNDS</h2>
+      <p>Refunds will be applicable for the cancellation of a subscription made 72 hours before the delivery date.</p>
+      <p>Refunds will be done only through the Original Mode of Payment.</p>
+      <h2>Subscription ORDER</h2>
+      <p>Advance payment is required upon delivery. Minimum of 3 days and maximum of 14 days order to be scheduled within a period of 15 days, one delivery per day. Online orders only. Cannot be combined with any other discount, offer or promotion.</p>
+      <h2>offers & Promotions</h2>
+      <p>Discounts and Promotions are non-transferable and may not be resold. They have no cash value and cannot be exchanged for cash or gift cards. do not apply to taxes, shipping, handling charges, or any similar processing charges.</p>
+      <p>Promotion Period will be posted and communicated through, newsletters, advertisements and on our e-catalogue. The Promotion period, along with the start and end dates, will be clearly mentioned in the promotional material. Promotions will not be honoured outside of this period.</p>
+     </div>
+    </div>
+   </section>
+  </main>
+ </body>
+</html>
