--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     @include('partials/header.html')
     <main class="main">
 
-        <section class="hero color-white">
+        <section class="hero color-white bg-section">
           <div class="container hero__inner flex align-items-center">
             <div class="hero__info">
               <h1 class="hero__title font-semibold">
@@ -17,7 +17,7 @@
               <p class="hero__description font-subtitle font-semibold">
                 And harvest just before you eat at peak freshness and nutrition
               </p>
-              <div class="hero__notice flex align-items-center">
+              <div class="hero__notice flex align-items-center line-height-xl">
                 <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M25 42C15.6 42 8 34.4 8 25C8 15.6 15.6 8 25 8C34.4 8 42 15.6 42 25C42 34.4 34.4 42 25 42ZM25 10C16.7 10 10 16.7 10 25C10 33.3 16.7 40 25 40C33.3 40 40 33.3 40 25C40 16.7 33.3 10 25 10Z" fill="#E3E2AA"/>
                   <path d="M22.9998 32.4001L14.2998 23.7001L15.6998 22.3L22.9998 29.6L34.2998 18.3L35.6998 19.7001L22.9998 32.4001Z" fill="#E3E2AA"/>
@@ -28,9 +28,9 @@
                   Grown less than 1 km away from your home in Dubai Hills
                 </p>
               </div>
-              <button class="btn btn-primary hero__btn">
-                Pre-subscribe for 10 AED
-              </button>
+              <a href="" class="btn btn-primary hero__btn" target="_blank">
+                View subscription options
+              </a>
             </div>
           </div>
         </section>
@@ -42,7 +42,7 @@
             </h2>
             <div class="difference__inner grid grid-cols-12">
               <div class="difference__items flex" data-aos="fade-up">
-                <div class="difference__item flex align-items-center difference__item--question" data-aos="fade-up" ><p>Worried where your greens are grown?</p>
+                <div class="difference__item flex align-items-center difference__item--question line-height-xl" data-aos="fade-up" ><p>Worried where your greens are grown?</p>
                 </div>
                 <div class="difference__item flex align-items-center difference__item--answer color-white"
 
@@ -51,7 +51,7 @@
                 </div>
               </div>
               <div class="difference__items flex" data-aos="fade-up" data-aos-delay="150">
-                <div class="difference__item flex align-items-center difference__item--question"><p>Worried about consuming chemicals and pesticides?</p>
+                <div class="difference__item flex align-items-center difference__item--question line-height-xl"><p>Worried about consuming chemicals and pesticides?</p>
                 </div>
                 <div class="difference__item flex align-items-center difference__item--answer color-white"
 
@@ -60,7 +60,7 @@
                 </div>
               </div>
               <div class="difference__items flex" data-aos="fade-up" data-aos-delay="250">
-                <div class="difference__item flex align-items-center difference__item--question"
+                <div class="difference__item flex align-items-center difference__item--question line-height-xl"
 
                 ><p>Supermarket greens die in your fridge after 2 days?</p>
                 </div>
@@ -69,23 +69,23 @@
                 </div>
               </div>
               <div class="difference__items flex" data-aos="fade-up" data-aos-delay="350">
-                <div class="difference__item flex align-items-center difference__item--question"><p>Supermarket greens loose most vitamins and nutrients by the time you eat them?</p>
+                <div class="difference__item flex align-items-center difference__item--question line-height-xl"><p>Supermarket greens lose most vitamins and nutrients by the time you eat them?</p>
                 </div>
-                <div class="difference__item flex align-items-center difference__item--answer color-white">
+                <div class="difference__item flex align-items-center difference__item--answer color-white line-height-xl">
                   <p>Harvest ours just before you eat at peak freshness and nutrition</p>
                 </div>
               </div>
               <div class="difference__items flex" data-aos="fade-up" data-aos-delay="450">
-                <div class="difference__item flex align-items-center difference__item--question"><p>Keep forgetting to buy ingredients for your salad or smoothie?</p>
+                <div class="difference__item flex align-items-center difference__item--question line-height-xl"><p>Keep forgetting to buy ingredients for your salad or smoothie?</p>
                 </div>
-                <div class="difference__item flex align-items-center difference__item--answer color-white">
+                <div class="difference__item flex align-items-center difference__item--answer color-white line-height-xl">
                   <p>Cross it out of your grocery list. It’s on us! </p>
                 </div>
               </div>
               <div class="difference__items flex" data-aos="fade-up" data-aos-delay="550">
-                <div class="difference__item flex align-items-center difference__item--question"><p>Other greens all taste the same?</p>
+                <div class="difference__item flex align-items-center difference__item--question line-height-xl"><p>Other greens all taste the same?</p>
                 </div>
-                <div class="difference__item flex align-items-center difference__item--answer color-white">
+                <div class="difference__item flex align-items-center difference__item--answer color-white line-height-xl">
                   <p>Just try ours once and taste the difference</p>
                 </div>
               </div>
@@ -97,7 +97,7 @@
 
           <div class="container">
             <div class="benefits__inner grid">
-              <div class="benefits__list grid">
+              <div class="benefits__list grid bg-section">
                 <div class="benefits__item flex align-items-center"  >
                   <div class="align-self-start" data-aos="fade-down">
                     <svg width="88" height="88" viewBox="0 0 88 88" fill="none" xmlns="http://www.w3.org/2000/svg" >
@@ -183,15 +183,27 @@
                     Tasty and hustle-free
                   </h3>
                 </div>
-                <button class="btn btn-primary benefits__btn">
+                <button class="btn btn-primary benefits__btn" data-modal-open="video">
                   See how it's grown
                 </button>
               </div>
               <div class="benefits__info flex" data-aos="fadeup">
-                <h2 class="benefits__title section-title color-white">
-                  We deliver a variety of leafy <span class="color-secondary">greens</span> to your doorstep in
-                  Dubai Hills every week
-                </h2>
+                <div class="benefits__note">
+                  <h2 class="benefits__title section-title color-white">
+                    We deliver a variety of leafy <span class="color-secondary">greens</span> to your doorstep in
+                    Dubai Hills every week
+                  </h2>
+                </div>
+              </div>
+
+
+
+              <div class="modal" data-modal="video">
+                <div class="modal__wrapper">
+                  <div class="modal__item">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/iZf0si7I0Mw?si=A4PTjxoMf5jbyz-P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -278,6 +290,29 @@
           </div>
         </section>
 
+        <section class="trial color-white">
+          <div class="container">
+            <div class="trial__inner grid grid-cols-12 bg-section">
+              <div class="trial__info grid">
+                <h2 class="trial__title section-title">
+                  Want to try our products before subscribing?
+                </h2>
+                <p class="trial__description line-height-xl">
+                  Get a trial package with <span class="color-secondary">4 different </span> types of leafy greens
+                </p>
+                <div class="trial__actions flex">
+                  <a href="#" class="btn btn-primary trial__btn" target="_blank">
+                    Order for 20 AED
+                  </a>
+                  <p class="trial__note">
+                    Trial option available until the 2nd of January 2024
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
 
         <section class="packages section-padding-top" >
 
@@ -289,7 +324,7 @@
               <ul class="packages__list grid">
                 <li class="packages__item grid" data-aos="fadeup">
                   <h3 class="packages__subtitle font-semibold centered">
-                    Italian Mix
+                    Garden Fusion
                   </h3>
                   <div class="packages__images grid">
                     <div class="packages__image">
@@ -313,12 +348,15 @@
                         <img loading="lazy" src="img/image.png" alt="Super Kale" class="packages__image" width="127" height="127">
                       </picture>
                     </div>
+
                     <div class="packages__image">
-                     <picture>
-                      <source srcset="img/image-6.webp" type="image/webp">
-                      <img loading="lazy" src="img/image-6.png" alt="Fragrant Basil" class="packages__image" width="127" height="127">
-                     </picture>
+                      <picture>
+                        <source srcset="img/image-3.webp" type="image/webp">
+                        <img loading="lazy" src="img/image-3.png" class="image" width="127" height="127" alt="Mighty Spinach">
+                      </picture>
+
                     </div>
+
                   </div>
                   <div class="packages__info grid">
                    <div class="packages__info-items">
@@ -351,7 +389,7 @@
                         1 head
                       </span>
                       <h4 class="packages__name font-medium">
-                        Fragrant Basil
+                        Mighty Spinach
                       </h4>
                     </div>
                    </div>
@@ -367,7 +405,7 @@
                 </li>
                 <li class="packages__item grid" data-aos="fadeup">
                   <h3 class="packages__subtitle font-semibold centered">
-                    Asian Mix
+                    Savoury Delight
                   </h3>
                   <div class="packages__images grid">
                     <div class="packages__image">
@@ -393,13 +431,14 @@
                       >
                       </picture>
                     </div>
+
+
                     <div class="packages__image">
                       <picture>
-                        <source srcset="img/image-3.webp" type="image/webp">
-                        <img loading="lazy" src="img/image-3.png" class="image" width="127" height="127" alt="Mighty Spinach">
+                       <source srcset="img/image-6.webp" type="image/webp">
+                       <img loading="lazy" src="img/image-6.png" alt="Fragrant Basil" class="packages__image" width="127" height="127">
                       </picture>
-
-                    </div>
+                     </div>
                   </div>
                   <div class="packages__info grid">
                     <div class="packages__info-items">
@@ -432,7 +471,7 @@
                           1 head
                         </span>
                         <h4 class="packages__name font-medium">
-                          Mighty Spinach
+                          Fragrant Basil
                         </h4>
                       </div>
                     </div>
@@ -463,13 +502,10 @@
               <h2 class="offer__title section-title">
                 Get your subscription
               </h2>
-              <div class="offer__info" data-aos="fadeup">
-                <p class="offer__subtitle font-semibold">Subscriptions will become effective on the 2nd of January 2024</p>
+              <div class="offer__info line-height-xl" data-aos="fadeup">
+                <p class="offer__subtitle font-semibold">Make an early bird pre-booking before 12th of December and receive a holiday special</p>
                 <div class="offer__notice grid">
-                  <p>However you can make an early-bird pre-booking for 10 AED only now and get a free community farm tour*</p>
-                  <p class="offer__remark">
-                    *first 100 subscribers
-                  </p>
+                  <p>Subscriptions will become effective on the 12th of December 2023</p>
                 </div>
               </div>
               <ul class="offer__list grid grid-cols-12">
@@ -482,9 +518,9 @@
                       75 AED
                     </p>
                   </div>
-                  <button class="btn btn-primary offer__btn">
-                    pre-book now for 10 AED
-                  </button>
+                  <a href="https://nabta-102245.zbooni.com" class="btn btn-primary offer__btn" target="_blank">
+                    GET SUBSCRIPTION
+                  </a>
                 </li>
                 <li class="offer__item grid" data-aos="fadeup" data-aos-delay="150">
                   <h3 class="offer__duration font-semibold">
@@ -498,9 +534,9 @@
                       200 AED
                     </p>
                   </div>
-                  <button class="btn btn-primary offer__btn">
-                    pre-book now for 10 AED
-                  </button>
+                  <a href="https://nabta-102245.zbooni.com" class="btn btn-primary offer__btn" target="_blank">
+                    GET SUBSCRIPTION
+                  </a>
                   <div class="offer__sale font-semibold bg-secondary color-primary">
                     - 12 %
                   </div>
@@ -517,15 +553,12 @@
                       350 AED
                     </p>
                   </div>
-                  <button class="btn btn-primary offer__btn">
-                    pre-book now for 10 AED
-                  </button>
+                  <a href="https://nabta-102245.zbooni.com" class="btn btn-primary offer__btn" target="_blank">
+                    GET SUBSCRIPTION
+                  </a>
                   <div class="offer__sale font-semibold bg-secondary color-primary">
                     - 23 %
                   </div>
-                </li>
-                <li class="offer__detail centered" data-aos="fadeup" data-aos-delay="350">
-                  We want to keep the process hassle-free for you, that's why subscription renews automatically, but you can cancel it anytime
                 </li>
               </ul>
 
@@ -533,7 +566,8 @@
           </div>
         </section>
 
-        <section class="powered color-white">
+
+        <section class="powered color-white bg-section">
           <div class="container powered__inner grid">
 
               <div class="powered__info grid">
