--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                   Grown less than 1 km away from your home in Dubai Hills
                 </p>
               </div>
-              <a href="" class="btn btn-primary hero__btn" target="_blank">
+              <a href="" class="btn btn-primary hero__btn" target="_blank" data-scroll-to=".packages">
                 View subscription options
               </a>
             </div>
@@ -538,7 +538,13 @@
               <div class="modal" data-modal="video">
                 <div class="modal__wrapper">
                   <div class="modal__item">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/iZf0si7I0Mw?si=A4PTjxoMf5jbyz-P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+                    <button class="modal__close" data-modal-close>
+                      <svg width="31" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M23.6375 7.37546C23.518 7.25572 23.3761 7.16072 23.2198 7.0959C23.0636 7.03108 22.8961 6.99772 22.7269 6.99772C22.5577 6.99772 22.3902 7.03108 22.234 7.0959C22.0777 7.16072 21.9358 7.25572 21.8163 7.37546L15.5 13.6788L9.18379 7.36254C9.06421 7.24296 8.92224 7.1481 8.766 7.08338C8.60975 7.01866 8.44229 6.98535 8.27317 6.98535C8.10405 6.98535 7.93659 7.01866 7.78034 7.08338C7.6241 7.1481 7.48213 7.24296 7.36254 7.36254C7.24296 7.48213 7.1481 7.6241 7.08338 7.78034C7.01866 7.93659 6.98535 8.10405 6.98535 8.27317C6.98535 8.44229 7.01866 8.60975 7.08338 8.766C7.1481 8.92224 7.24296 9.06421 7.36254 9.18379L13.6788 15.5L7.36254 21.8163C7.24296 21.9359 7.1481 22.0778 7.08338 22.2341C7.01866 22.3903 6.98535 22.5578 6.98535 22.7269C6.98535 22.896 7.01866 23.0635 7.08338 23.2197C7.1481 23.376 7.24296 23.518 7.36254 23.6375C7.48213 23.7571 7.6241 23.852 7.78034 23.9167C7.93659 23.9814 8.10405 24.0147 8.27317 24.0147C8.44229 24.0147 8.60975 23.9814 8.766 23.9167C8.92224 23.852 9.06421 23.7571 9.18379 23.6375L15.5 17.3213L21.8163 23.6375C21.9359 23.7571 22.0778 23.852 22.2341 23.9167C22.3903 23.9814 22.5578 24.0147 22.7269 24.0147C22.896 24.0147 23.0635 23.9814 23.2197 23.9167C23.376 23.852 23.518 23.7571 23.6375 23.6375C23.7571 23.518 23.852 23.376 23.9167 23.2197C23.9814 23.0635 24.0147 22.896 24.0147 22.7269C24.0147 22.5578 23.9814 22.3903 23.9167 22.2341C23.852 22.0778 23.7571 21.9359 23.6375 21.8163L17.3213 15.5L23.6375 9.18379C24.1284 8.69296 24.1284 7.86629 23.6375 7.37546Z" fill="white"/>
+                        </svg>
+
+                    </button>
+                    <iframe width="960" height="455" src="https://www.youtube.com/embed/iZf0si7I0Mw?si=A4PTjxoMf5jbyz-P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
                   </div>
                 </div>
               </div>
@@ -638,7 +644,7 @@
                   Get a trial package with <span class="color-secondary">4 different </span> types of leafy greens
                 </p>
                 <div class="trial__actions flex">
-                  <a href="#" class="btn btn-primary trial__btn" target="_blank">
+                  <a href="https://nabta-102245.zbooni.com" class="btn btn-primary trial__btn" target="_blank">
                     Order for 20 AED
                   </a>
                   <p class="trial__note">
@@ -703,20 +709,23 @@
                         Lollo Rosso Lettuce
                       </h4>
                     </div>
+
+                    <div class="packages__info-item grid">
+
+                      <span class="packages__count font-medium">
+                        1 head
+                      </span>
+                      <h4 class="packages__name font-medium">
+                        Super Kale
+                      </h4>
+                    </div>
+
                     <div class="packages__info-item grid">
                       <span class="packages__count font-medium">
                         1 head
                       </span>
                       <h4 class="packages__name font-medium">
                         Lollo Bionda Lettuce
-                      </h4>
-                    </div>
-                    <div class="packages__info-item grid">
-                      <span class="packages__count font-medium">
-                        1 head
-                      </span>
-                      <h4 class="packages__name font-medium">
-                        Super Kale
                       </h4>
                     </div>
                     <div class="packages__info-item grid">
@@ -788,7 +797,7 @@
                           1 head
                         </span>
                         <h4 class="packages__name font-medium">
-                          Lollo Bionda Lettuce
+                          Green Bok Choy
                         </h4>
                       </div>
                       <div class="packages__info-item grid">
@@ -796,7 +805,7 @@
                           1 head
                         </span>
                         <h4 class="packages__name font-medium">
-                          Green Bok Choy
+                          Lollo Bionda Lettuce
                         </h4>
                       </div>
                       <div class="packages__info-item grid">
@@ -975,9 +984,9 @@
               <h2 class="info__title section-title">
                 Want to know more about our technology?
               </h2>
-              <button class="info__btn btn btn-light">
+              <a href="https://www.alescalife.com" class="info__btn btn btn-light" target="_blank">
                 Visit our website
-              </button>
+              </a>
             </div>
 
           </div>
